tests/snapshots/examples_fixtures/sealing__allow_console.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/sealing/allow_console.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
