tests/snapshots/examples_fixtures/sealing__ambient_subtraction.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/sealing/ambient_subtraction.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
