tests/snapshots/examples_fixtures/sealing__io_alias.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/sealing/io_alias.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
