tests/snapshots/examples_fixtures/sealing__nested_sealing.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/sealing/nested_sealing.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
