tests/snapshots/examples_fixtures/sealing__polymorphic_callback.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/sealing/polymorphic_callback.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
